// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryStepsDataSource query should convert properties to Grafana fields 1`] = `
[
  {
    "name": "properties",
    "type": "string",
    "values": [
      "{"key1":"value1","key2":"value2"}",
    ],
  },
]
`;

exports[`QueryStepsDataSource query should convert step measurements to Grafana fields when show measurments is enabled 1`] = `
[
  {
    "name": "Measurement Name",
    "type": "string",
    "values": [
      [
        "Voltage",
        "Voltage",
        "Current",
      ],
    ],
  },
  {
    "name": "Measurement Value",
    "type": "string",
    "values": [
      [
        "3.7",
        "3.7",
        "1.2",
      ],
    ],
  },
  {
    "name": "Status",
    "type": "string",
    "values": [
      [
        "Passed",
        "Passed",
        "Failed",
      ],
    ],
  },
  {
    "name": "Unit",
    "type": "string",
    "values": [
      [
        "V",
        "V",
        "A",
      ],
    ],
  },
  {
    "name": "Low Limit",
    "type": "string",
    "values": [
      [
        "3.5",
        "3.5",
        "1.0",
      ],
    ],
  },
  {
    "name": "High Limit",
    "type": "string",
    "values": [
      [
        "4.0",
        "4.0",
        "1.5",
      ],
    ],
  },
]
`;

exports[`QueryStepsDataSource query should return data for valid data-output-type query 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "type": "string",
        "values": [
          "Step 1",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`QueryStepsDataSource query should return no data when QuerySteps API returns empty array 1`] = `[]`;

exports[`QueryStepsDataSource query should return total count for valid total count output type queries 1`] = `
[
  {
    "fields": [
      {
        "name": "Total count",
        "values": [
          1,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`QueryStepsDataSource querySteps should return data when there are valid queries 1`] = `
{
  "continuationToken": undefined,
  "steps": [
    {
      "name": "Step 1",
      "properties": {
        "key1": "value1",
        "key2": "value2",
      },
      "stepId": "1",
    },
  ],
  "totalCount": 1,
}
`;
